# SHU_AGENTIC_RAG_ASSISTANT

./: .gitignore  README.md  evaluate.py  ingest.py  main.py  practice.ipynb  pyproject.toml  ragas_results.csv  requirements.txt  tracing.py
data/: shu_supplementary_kb.json
shu_rag/agent/: agent.py  memory.py  tools.py
shu_rag/config/: settings.py
shu_rag/generation/: generator.py  llm.py
shu_rag/ingestion/: loader.py  vectorstore.py
shu_rag/pipeline/: pipeline.py
shu_rag/prompts/: answer_prompt.py  system_prompt.py
shu_rag/reranking/: reranker.py
shu_rag/retrieval/: filters.py  query_intent.py  retriever.py
